<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editPassword"
        android:layout_marginHorizontal="75dp"
        android:ems="10"
        android:hint="@string/email_name"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginButton"
        android:layout_marginHorizontal="75dp"
        android:ems="10"
        android:hint="@string/pass_name"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="150dp"
        android:layout_marginTop="10dp"
        android:text="@string/log_btn_name" />

    <Button
        android:id="@+id/regButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="120dp"
        android:layout_marginBottom="10dp"
        android:linksClickable="false"
        android:text="@string/reg_btn_name"
        android:textAlignment="center" />
</RelativeLayout>