<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <EditText
        android:id="@+id/addName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_name"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:layout_margin="12dp"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/selectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_date"
        android:inputType="date"
        android:minHeight="48dp"
        android:layout_margin="12dp"
        android:textAlignment="center"
        android:textColorHint="@color/hint_color" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="12dp"
        android:layout_marginHorizontal="100dp"
        android:text="@string/add_btn"
        android:textSize="17sp" />
</LinearLayout>