<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="50dp"
    android:gravity="center"
    android:orientation="vertical">

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email_name"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/pass_name"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="@color/hint_color" />

    <Button
        android:id="@+id/signButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sign_btn_name" />
</LinearLayout>